<resources>
    <string name="app_name">Insurance Master</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_photos_here">Upload Photos Here:</string>
    <string name="upload_second_ndriver_id">Upload second\ndriver id</string>
    <string name="upload_second_ndriver_insurance">Upload second\ndriver insurance</string>
    <string name="upload_accident_nphoto">Upload accident\nphoto</string>
    <string name="add_description">add description</string>
    <string name="witnesses_details">witnesses details</string>
    <string name="send">Send</string>
    <string name="date">Date:</string>
    <string name="location">Location:</string>
    <string name="description">Description:</string>
    <string name="witnesses">Witnesses:</string>
    <string name="if_you_car_got_stuck_you_can_invite_a_drag_for_rescue">If you car got stuck, you can invite a drag for rescue</string>
    <string name="set_current_location">Set Current Location</string>
    <string name="send_request">Send Request</string>
    <string name="policy_details">Policy Details</string>
    <string name="drag_rescue">drag rescue</string>
    <string name="tracking">Tracking</string>
    <string name="policy_is_good_until">Policy is good until:</string>
    <string name="registered_date">Registered date</string>
    <string name="price">price</string>
    <string name="select_date">Select Date</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_licence_plate">Enter licence plate:</string>
    <string name="enter_car_model">Enter car model:</string>
    <string name="enter_car_year_of_production">Enter car year of production:</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="all_fields_must_be_filled">All fields must be filled!</string>
    <string name="login_error">Some thing went wrong</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="must_save">Must save before exit</string>
    <string name="main_menu">Main Menu</string>
    <string name="press_to_exit">Press again to exit</string>
    <string name="no_location_permission">No Location Permission</string>
    <string name="drag_arraived">Drag Has Arrived!</string>
    <string name="must_location">Must have location</string>
    <string name="err_load_image">Error At Loading Image</string>
    <string name="images_success">All Images Uploaded Successfully</string>
    <string name="on_more_failed">One Or More Images Are Failed</string>
    <string name="fill_fields_and_photos">Must Fill All Fields And Upload All Photos</string>
    <string name="must_fill_fileds">Must Fill All Fields</string>
    <string name="profile_headLine">You are at profile editing. Please make sure to change to the exact details!</string>
    <string name="profle_headLine_newUser">Welcome to Insurance Master. Please fill the required fields</string>
    <string name="s_o_s_label">S.O.S</string>
    <string name="save_details">Save Details</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="logout">Logout</string>
    <string name="successfully_logedOut">Successfully Loged Out</string>
    <string name="request_Canceled">The request was canceled</string>
</resources>