<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sosActivity"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:isScrollContainer="false"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sos_TXT_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:padding="5dp"
            android:text="@string/upload_photos_here"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/sos_LLY_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sos_TXT_label"
            android:layout_marginTop="16dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sos_IMG_id"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/add_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_second_ndriver_id"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="15dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sos_IMG_insurance"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/add_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_second_ndriver_insurance"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="15dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sos_IMG_crash"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/add_photo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_accident_nphoto"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sos_EDT_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_description"
            android:layout_below="@+id/sos_LLY_images"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:padding="6dp"
            android:background="@drawable/custom_input"
            android:textColorHint="@color/gray"

            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sos_EDT_witnesses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/witnesses_details"
            android:textColorHint="@color/gray"
            android:textSize="24sp"
            android:padding="6dp"
            android:layout_below="@+id/sos_EDT_description"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:background="@drawable/custom_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sos_BTN_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:backgroundTint="@color/white"
            app:cornerRadius="20dp"
            android:layout_below="@id/sos_EDT_witnesses"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            />

        <ProgressBar
            android:id="@+id/sos_PRG_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_centerInParent="true"
            android:progress="25"
            android:visibility="invisible"
            />
    </RelativeLayout>
</ScrollView>