<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".policyDetailsActivity"
    android:background="@drawable/background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/policy_IMG_pImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/add_photo" />

    <LinearLayout
        android:id="@+id/policy_LLY_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/policy_IMG_pImage"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        >

        <LinearLayout
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/policy_TXT_regDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/registered_date"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/policy_BTN_datePicker"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:text="@string/select_date"
                android:textColor="@color/white"
                style="?android:spinnerStyle"
                android:textAlignment="viewStart"
                android:textSize="22sp"
                android:theme="@style/Platform.MaterialComponents.Light"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="32dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/policy_TXT_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/policy_EDT_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_input"
                android:textColor="@color/black"
                android:padding="6dp"
                android:textSize="20sp"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/policy_TXT_untilLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/policy_LLY_data"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:text="@string/policy_is_good_until"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/policy_TXT_untilDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/policy_TXT_untilLabel"
        android:layout_centerInParent="true"
        android:layout_marginTop="4dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="48dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/policy_BTN_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/save_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="32dp" />

        <LinearLayout
            android:layout_width="32dp"
            android:layout_height="match_parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/policy_BTN_upload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/upload_photo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="32dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/policy_PRG_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_centerInParent="true"
        android:progress="25"
        android:visibility="invisible"
        />


</RelativeLayout>