<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:id="@+id/main_LLY_Det"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_TXT_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            />

        <TextView
            android:id="@+id/main_TXT_licence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            />

        <TextView
            android:id="@+id/main_TXT_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            />

        <TextView
            android:id="@+id/main_TXT_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_BTN_tracking"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/white"
        android:text="@string/tracking"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="16dp" />

    <LinearLayout
        android:id="@+id/main_LLY_buttons"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/main_BTN_tracking"
        android:layout_marginBottom="16dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_policyDetails"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/policy_details"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="16dp" />

        <LinearLayout
            android:layout_width="32dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_BTN_drag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/drag_rescue"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="16dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_BTN_sos"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_above="@id/main_LLY_buttons"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/s_o_s_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="16dp" />

</RelativeLayout>