<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/det_IMG_id"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo"
                />
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/det_IMG_insurance"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:src="@drawable/add_photo"
                android:background="@color/black"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:layout_toEndOf="@id/det_IMG_id"
                android:layout_marginStart="20dp"
                />
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/det_IMG_crash"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:src="@drawable/add_photo"
                android:background="@color/black"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:layout_below="@+id/det_IMG_id"
                />

            <TextView
                android:id="@+id/det_TXT_dateHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/det_IMG_insurance"
                android:layout_toEndOf="@+id/det_IMG_crash"
                android:layout_marginTop="15dp"
                android:text="@string/date"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="25dp"

                />
            <TextView
                android:id="@+id/det_TXT_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/det_IMG_crash"
                android:layout_below="@id/det_TXT_dateHead"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="25dp"

                />

            <TextView
                android:id="@+id/det_TXT_locationHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/det_IMG_crash"
                android:layout_below="@id/det_TXT_date"
                android:layout_marginTop="10dp"
                android:text="@string/location"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="25dp"

                />
            <TextView
                android:id="@+id/det_TXT_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/det_IMG_crash"
                android:layout_below="@id/det_TXT_locationHead"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="25dp"

                />
            <TextView
                android:id="@+id/det_TXT_descriptionHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/det_IMG_crash"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"

                />
            <TextView
                android:id="@+id/det_TXT_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/det_TXT_descriptionHead"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"

                /><TextView
            android:id="@+id/det_TXT_witnessesHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/det_TXT_description"
            android:layout_marginTop="10dp"
            android:text="@string/witnesses"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"

            />
            <TextView
                android:id="@+id/det_TXT_witnesses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/det_TXT_witnessesHead"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"

                />
        </RelativeLayout>
</ScrollView>