<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RequestFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/request_TXT_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/if_you_car_got_stuck_you_can_invite_a_drag_for_rescue"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/request_BTN_setLocation"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@+id/request_TXT_title"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/set_current_location"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="16dp" />

        <TextView
            android:id="@+id/request_TXT_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/request_BTN_setLocation"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/request_BTN_send"
            android:layout_width="245dp"
            android:layout_height="60dp"
            android:layout_below="@+id/request_TXT_location"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/send_request"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="16dp" />

        <LinearLayout
            android:id="@+id/request_LYO_progress"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/request_BTN_send"

            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/marker1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/hollowmarker" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/marker2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/hollowmarker" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/marker3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/hollowmarker" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/marker4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/hollowmarker" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBarMain"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:progressDrawable="@drawable/custom_progress_bg" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>